[project]
name = "ai-chatbot"
version = "0.1.0"
description = "basic AI chatbot using Google Gemini API & Agentic SDK"
readme = "README.md"
authors = [
    { name = "aatika-hakim", email = "aatikahakim90@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
ai-chatbot = "ai_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
